# portkill

./: LICENSE  README.ja.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.vue  i18n.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_panel.rs  main.rs  ports.rs
