[package]
name = "portkill"
version = "0.1.2"
description = "Menu bar tool to find and kill processes listening on ports"
authors = ["willpower"]
edition = "2021"

[lib]
name = "portkill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

# required by tauri-nspanel's panel_delegate! macro
[features]
cargo-clippy = []

[profile.release]
strip = true
lto = true
codegen-units = 1
